# outRank_fileupload_Backend

./: Cargo.toml  ystemctl status outrank.fileupload.service
src/: main.rs
upload/: fileList.txt
upload/tmp/: canister_ids.json  dfx.json
upload/tmp/www/: index.html
