[package]
name = "outrank_file_upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-multipart = "0.3.0"
futures = "0.3.17"
actix-cors = "0.5"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
